# I2Clinux

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
include/: I2Clinux.h  I2Cpi.h
src/: I2Clinux.cpp  I2Cpi.cpp
